--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 //    buildFeatures {
 //        compose true
 //    }
 //    composeOptions {
 //        kotlinCompilerExtensionVersion compose_version
 //    }
+
     packagingOptions {
         resources {
             excludes.add("META-INF/gradle/incremental.annotation.processors")
@@ -53,10 +55,36 @@ android {
         resources.excludes.add("META-INF/*")
     }
 }
+
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "androidx.core:core-ktx:$core_ktx_version"
 
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$interceptor_version"
+
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    implementation "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    implementation "androidx.room:room-ktx:$room_version"
+
+    implementation "androidx.datastore:datastore-preferences:$datastore_version"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$mockwebserver_version"
+    testImplementation "androidx.arch.core:core-testing:$core_testing_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
+
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
+
+//    ksp "com.squareup.moshi:moshi-kotlin-codegen:$mosh_version"
 //    implementation "androidx.compose.ui:ui:$compose_version"
 //    implementation "androidx.compose.material:material:$compose_version"
 //    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
@@ -64,30 +92,5 @@ dependencies {
 //    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 //    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 //    implementation 'androidx.activity:activity-compose:1.5.1'
-
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
-
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    implementation "com.google.dagger:hilt-android-compiler:$hilt_version"
-
-    implementation 'androidx.room:room-ktx:2.4.3'
-
-    implementation 'androidx.datastore:datastore-preferences:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-
-    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
-//    ksp 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
-
 }
 
