--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,20 @@ buildscript {
     ext {
         compose_version = '1.3.0-beta02'
         hilt_version = "2.42"
+        datastore_version = "1.0.0"
+        glide_version = "4.13.2"
+        moshi_version = "1.13.0"
+        retrofit_version = "2.9.0"
+        coroutine_version = "1.6.4"
+        lifecycle_version = "2.5.1"
+        interceptor_version = "4.10.0"
+        room_version = "2.4.3"
+        core_ktx_version = "1.7.0"
+        mockwebserver_version = "4.10.0"
+        core_testing_version = "2.1.0"
+        espresso_version = "3.4.0"
+        junit_version = "4.13.2"
+        junit_ext_version = "1.1.3"
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
