--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ android {
 
 dependencies {
 
-    implementation "androidx.core:core-ktx:$core_ktx_version"
+    implementation 'androidx.core:core-ktx:1.8.0'
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
@@ -71,6 +71,8 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "com.google.dagger:hilt-android-compiler:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+//    implementation "androidx.hilt:hilt-work:$hilt_version"
 
     implementation "androidx.room:room-ktx:$room_version"
 
@@ -82,6 +84,8 @@ dependencies {
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
 
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_lifecycle"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
 //    ksp "com.squareup.moshi:moshi-kotlin-codegen:$mosh_version"
