--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,10 @@ buildscript {
         espresso_version = "3.4.0"
         junit_version = "4.13.2"
         junit_ext_version = "1.1.3"
+        viewmodel_lifecycle = "2.5.1"
+        fragment_version = "1.5.2"
     }
+
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
