--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,10 +71,13 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 //    implementation "androidx.hilt:hilt-work:$hilt_version"
 
     implementation "androidx.room:room-ktx:$room_version"
+//    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+//    kapt "android.arch.persistence.room:compiler:1.1.1"
 
     implementation "androidx.datastore:datastore-preferences:$datastore_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
@@ -87,7 +90,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_lifecycle"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
-
 //    ksp "com.squareup.moshi:moshi-kotlin-codegen:$mosh_version"
 //    implementation "androidx.compose.ui:ui:$compose_version"
 //    implementation "androidx.compose.material:material:$compose_version"
