--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_lifecycle"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
+
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 //    ksp "com.squareup.moshi:moshi-kotlin-codegen:$mosh_version"
 //    implementation "androidx.compose.ui:ui:$compose_version"
 //    implementation "androidx.compose.material:material:$compose_version"
