Add cache logic

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ plugins {
 //    id("com.google.devtools.ksp").version("1.6.0-1.0.1")
 }
 
-
 android {
     compileSdk 32
 
@@ -77,7 +76,8 @@ dependencies {
 
     implementation "androidx.room:room-ktx:$room_version"
 //    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-//    kapt "android.arch.persistence.room:compiler:1.1.1"
+//    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt("androidx.room:room-compiler:$room_version")
 
     implementation "androidx.datastore:datastore-preferences:$datastore_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
