--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,11 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutine_version"
+    testImplementation 'org.mockito:mockito-inline:3.5.13'
+    testImplementation "org.mockito:mockito-core:3.5.13"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    testImplementation "io.mockk:mockk:1.4.1"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_lifecycle"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
@@ -93,6 +98,7 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
+
 
 //    ksp "com.squareup.moshi:moshi-kotlin-codegen:$mosh_version"
 //    implementation "androidx.compose.ui:ui:$compose_version"
