--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,8 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation "androidx.core:core-ktx:$core_ktx_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
@@ -70,13 +71,10 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation 'androidx.appcompat:appcompat:1.5.0'
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
-//    implementation "androidx.hilt:hilt-work:$hilt_version"
+
 
     implementation "androidx.room:room-ktx:$room_version"
-//    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-//    implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt("androidx.room:room-compiler:$room_version")
 
     implementation "androidx.datastore:datastore-preferences:$datastore_version"
@@ -87,18 +85,19 @@ dependencies {
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutine_version"
-    testImplementation 'org.mockito:mockito-inline:3.5.13'
-    testImplementation "org.mockito:mockito-core:3.5.13"
-    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
-    testImplementation "io.mockk:mockk:1.4.1"
+    testImplementation "org.mockito:mockito-inline:$mockit_inline_version"
+    testImplementation "org.mockito:mockito-core:$mockit_core_version"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:$mockit_kotlin_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_lifecycle"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "androidx.recyclerview:recyclerview:$rv_version"
+    implementation "androidx.cardview:cardview:$cardview_version"
 
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
 //    ksp "com.squareup.moshi:moshi-kotlin-codegen:$mosh_version"
 //    implementation "androidx.compose.ui:ui:$compose_version"
