--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,15 @@ buildscript {
         junit_ext_version = "1.1.3"
         viewmodel_lifecycle = "2.5.1"
         fragment_version = "1.5.2"
+        rv_version = "1.2.1"
+        cardview_version = "1.0.0"
+        paging_version = "3.1.1"
+        mockit_core_version = "3.9.0"
+        mockit_inline_version = "3.5.13"
+        mockit_kotlin_version = "3.2.0"
+        mockk_version = "1.4.1"
+        appcompat_version = "1.5.1"
+        core_ktx_version = "1.8.0"
     }
 
     dependencies {
